# dicom-toolkit-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DCMTK_PARITY_GAPS_PROTOCOL.md  LICENSE-APACHE  LICENSE-MIT  NOTICE  OPENJPH_RS_HTJ2K_BLOCKERS.md  PACS-READINESS.md  README.md  SECURITY.md  deny.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish-crates.yml  release.yml
crates/dicom-toolkit-codec/: Cargo.toml
crates/dicom-toolkit-codec/src/: lib.rs  registry.rs  rle.rs
crates/dicom-toolkit-codec/src/jp2k/: decoder.rs  encoder.rs  mod.rs
crates/dicom-toolkit-codec/src/jpeg/: decoder.rs  encoder.rs  lossless_encoder.rs  mod.rs  params.rs
crates/dicom-toolkit-codec/src/jpeg_ls/: bitstream.rs  context.rs  decoder.rs  encoder.rs  golomb.rs  marker.rs  mod.rs  params.rs  prediction.rs  sample.rs  scan.rs
crates/dicom-toolkit-codec/tests/: htj2k_registry.rs
crates/dicom-toolkit-core/: Cargo.toml
crates/dicom-toolkit-core/src/: charset.rs  config.rs  error.rs  lib.rs  log.rs  uid.rs
crates/dicom-toolkit-core/tests/: ofstd_port.rs
crates/dicom-toolkit-data/: Cargo.toml
crates/dicom-toolkit-data/src/: dataset.rs  element.rs  file_format.rs  json.rs  lib.rs  meta_info.rs  sequence.rs  value.rs  xml.rs
crates/dicom-toolkit-data/src/io/: codec.rs  mod.rs  reader.rs  transfer.rs  writer.rs
crates/dicom-toolkit-data/src/vr/: mod.rs
crates/dicom-toolkit-data/tests/: charset_roundtrip.rs  dcmdata_port.rs
crates/dicom-toolkit-dict/: Cargo.toml
crates/dicom-toolkit-dict/src/: generated_dictionary.rs  lib.rs  tag.rs  ts.rs  uid_registry.rs  vr.rs
crates/dicom-toolkit-dict/tests/: dcmdata_port.rs
crates/dicom-toolkit-image/: Cargo.toml
crates/dicom-toolkit-image/src/: dicom_image.rs  export.rs  lib.rs  lut.rs  overlay.rs  pixel.rs  render.rs  transform.rs  window.rs
crates/dicom-toolkit-image/src/color/: mod.rs  palette.rs  rgb.rs  ycbcr.rs
crates/dicom-toolkit-jpeg2000/: Cargo.toml  README.md
crates/dicom-toolkit-jpeg2000/src/: error.rs  lib.rs  math.rs  openjph_htj2k.rs  reader.rs  writer.rs
crates/dicom-toolkit-jpeg2000/src/j2c/: arithmetic_decoder.rs  arithmetic_encoder.rs  bitplane.rs  bitplane_encode.rs  build.rs  codestream.rs  codestream_write.rs  decode.rs  encode.rs  fdwt.rs  ht_block_decode.rs  ht_block_encode.rs  ht_encode_tables.rs  ht_tables.rs  idwt.rs  mct.rs  mod.rs  packet_encode.rs  segment.rs  tag_tree_encode.rs  tile.rs
crates/dicom-toolkit-jpeg2000/src/jp2/: cmap.rs  mod.rs
crates/dicom-toolkit-jpeg2000/tests/: htj2k_conformance.rs
crates/dicom-toolkit-net/: Cargo.toml
crates/dicom-toolkit-net/src/: association.rs  config.rs  dimse.rs  dul.rs  lib.rs  pdu.rs  presentation.rs  server.rs  tls.rs
crates/dicom-toolkit-net/src/services/: echo.rs  find.rs  get.rs  mod.rs  move.rs  provider.rs  store.rs
crates/dicom-toolkit-net/tests/: e2e.rs  server_e2e.rs
crates/dicom-toolkit-tools/: Cargo.toml
crates/dicom-toolkit-tools/src/: lib.rs  query_retrieve.rs
crates/dicom-toolkit-tools/tests/: getscu_cli.rs  jp2k_cli.rs  roundtrip.rs
crates/hayro-jpeg2000/: Cargo.toml
crates/hayro-jpeg2000/src/: lib.rs  reader.rs
crates/hayro-jpeg2000/src/j2c/: bitplane.rs  decode.rs  encode.rs  forward_mct.rs  packet_encode.rs  quantize.rs  tile.rs
crates/hayro-jpeg2000/src/jp2/: cdef.rs  mod.rs  pclr.rs
docs/: OPENJPH_RS_HTJ2K_BLOCKERS.md
examples/scripts/: 01_dump.ps1  01_dump.sh  02_network.ps1  02_network.sh  03_query.ps1  03_query.sh  04_img2dcm.ps1  04_img2dcm.sh  05_jpegls.ps1  05_jpegls.sh  06_jp2k.ps1  06_jp2k.sh  demo.ps1  demo.sh
scripts/: generate_dcmtk_dictionary.py  publish-crates.sh  simulate-ci.sh
