[package]
name = "dicom-toolkit-codec"
description = "DICOM image compression codecs: JPEG, JPEG-LS, RLE, and codec registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
dicom-toolkit-core.workspace = true
dicom-toolkit-dict.workspace = true
dicom-toolkit-data.workspace = true
jpeg-decoder.workspace = true
jpeg-encoder.workspace = true
flate2.workspace = true
inventory.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile = "3"
