[package]
name = "dicom-toolkit-jpeg2000"
version = "0.4.0"
description = "A memory-safe, pure-Rust JPEG 2000 codec with native-bit-depth decode and DICOM-focused encoding support."
authors = ["Laurenz Stampfl <laurenz.stampfl@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/dicom-toolkit-jpeg2000"
license.workspace = true
readme = "README.md"
exclude = ["/tests/", "/manifest_*.json", "/sync.py", "/TESTS.md"]
keywords = ["jpeg2000", "j2k", "dicom", "image", "codec"]
categories = ["multimedia::images", "encoding", "science"]

[lib]
name = "dicom_toolkit_jpeg2000"

[dependencies]
log = { version = "0.4", optional = true }
fearless_simd = { version = "0.3.0", optional = true }

[features]
default = ["std", "simd"]
std = []
simd = ["fearless_simd", "std"]
logging = ["dep:log"]
