[package]
name = "hayro-jpeg2000"
version = "0.3.4"
description = "A memory-safe, pure-Rust JPEG 2000 decoder (forked for DICOM 16-bit support)."
authors = ["Laurenz Stampfl <laurenz.stampfl@gmail.com>"]
edition = "2021"
repository = "https://github.com/LaurenzV/hayro"
license = "Apache-2.0 OR MIT"
readme = "README.md"
exclude = ["/tests/", "/manifest_*.json", "/sync.py", "/TESTS.md"]
publish = false

[dependencies]
log = { version = "0.4", optional = true }
fearless_simd = { version = "0.3.0", optional = true }

[features]
default = ["std", "simd"]
std = []
simd = ["fearless_simd", "std"]
logging = ["dep:log"]
